--- a/en/about/index.html
+++ b/en/about/index.html
@@ -280,47 +280,38 @@
                     <table id="webtime">
                         <tr>
                             <td class="time enw3">2023-06-05</td>
-                            <td class="tag zhw">#Setup</td>
                             <td class="event zhw">Published English version of the website</td>
                         </tr>
                         <tr>
                             <td class="time enw3">2023-04-28</td>
-                            <td class="tag zhw">#Blog</td>
                             <td class="event zhw">Completed JavaScript code for posting articles</td>
                         </tr>
                         <tr>
                             <td class="time enw3">2023-03-29</td>
-                            <td class="tag zhw">#About</td>
                             <td class="event zhw">Completed setup of the contact form</td>
                         </tr>
                         <tr>
                             <td class="time enw3">2023-03-26</td>
-                            <td class="tag zhw">#Setup</td>
                             <td class="event zhw">Completed second version CSS design for the website and officially published the website</td>
                         </tr>
                         <tr>
                             <td class="time enw3">2023-03-25</td>
-                            <td class="tag zhw">#Setup</td>
                             <td class="event zhw">Website renamed to "BlueBoy's Space"</td>
                         </tr>
                         <tr>
                             <td class="time enw3">2023-02-28</td>
-                            <td class="tag zhw">#Setup</td>
                             <td class="event zhw">Completed first version CSS design for the website</td>
                         </tr>
                         <tr>
                             <td class="time enw3">2023-02-19</td>
-                            <td class="tag zhw">#Setup</td>
-                            <td class="event zhw">Published <a href="https://blueboy247.github.io/website_old_ver/" target="_blank">test website</a> (via GitHub Pages) named "Allen Chang's Website"</td>
+                            <td class="event zhw">Published <a href="https://blueboy247.github.io/website_old_ver/" target="_blank">test website</a> named "Allen Chang's Website"</td>
                         </tr>
                         <tr>
                             <td class="time enw3">2023-02-18</td>
-                            <td class="tag zhw">#Setup</td>
                             <td class="event zhw">Completed HTML code for the website</td>
                         </tr>
                         <tr>
                             <td class="time enw3">2023-02-13</td>
-                            <td class="tag zhw">#Setup</td>
                             <td class="event zhw">Completed planning for the website architecture</td>
                         </tr>
                     </table>
