--- a/privacy.html
+++ b/privacy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-    <title>記事 | BlueBoy's Space</title>
+    <title>隱私權政策 Privacy Policy | BlueBoy's Space</title>
     <!-- meta tag -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,9 +26,6 @@
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-9189513725790874">
     <!-- other source -->
-    <link rel="stylesheet" href="/styles/blog.css">
-    <script src="/scripts/posting.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -57,25 +54,32 @@
     <main>
         <div class="pagehead">
             <p class="pagetitle">
-                <span class="zhwb">記事</span>
+                <span class="enw3">Privacy Policy</span>
             </p>
         </div>
-        <div id="post">
+        <div id="privacy">
+            <div class="pagesubtitle">
+                <p>
+                    <span class="enw1">GitHub Pages Service</span>
+                </p>
+            </div>
             <div class="content">
-                <table id="postblock">
-                    <caption>記事列表</caption>
-                    <thead>
-                        <tr id="tabletitle">
-                            <th class="time zhwb">發布時間</th>
-                            <th class="posttitle zhwb" style="text-align: left;">記事標題</th>
-                        </tr>
-                    </thead>
-                    <tbody id="postlist"></tbody>
-                </table>
-                <ol id="pagenum"></ol>
+                <p class="zhw">
+                    本網站使用 <a href="https://docs.github.com/zh/pages/getting-started-with-github-pages/about-github-pages" target="_blank">GitHub Pages 託管服務</a>。<br>
+                    GitHub 可能會收集您的個人資訊（如 IP 位址），以遵守法律義務，並維護本網站和服務的安全及完整性。詳情請參閱
+                    <a href="https://docs.github.com/zh/site-policy/privacy-policies/github-general-privacy-statement" target="_blank">GitHub 隱私聲明</a>。
+                </p>
+                <p class="enw2">
+                    This Website is hosted as a <a href="https://docs.github.com/zh/pages/getting-started-with-github-pages/about-github-pages" target="_blank">GitHub Pages</a> website.
+                    <br>
+                    GitHub may collect User Personal Information from visitors to this GitHub Pages website,
+                    including logs of visitor IP addresses, to comply with legal obligations,
+                    and to maintain the security and integrity of this Website and the Service. See the
+                    <a href="https://docs.github.com/en/site-policy/privacy-policies/github-general-privacy-statement" target="_blank">GitHub Privacy Statement</a>
+                    for details.
+                </p>
             </div>
         </div>
-        <script>listPostsPage();</script>
     </main>
     <footer>
         <p id="siterights">
