--- a/index.html
+++ b/index.html
@@ -1,61 +1,181 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 <head>
     <title>BlueBoy's Space</title>
-    <link rel="preload" href="/pictures/homepage_bg.jpg" as="image">
-    <link rel="stylesheet" href="/styles/index.css"><!-- media="screen and (min-width: 992px)"-->
-    <!--link rel="stylesheet" href="/styles/index-m.css" media="only screen and (min-width: 0px) and (max-width: 992px)"-->
+    <!-- meta tag -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- common source -->
+    <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-    <script src="/scripts/include.js"></script>
-    <script>include('Index')</script>
-    <script src="/scripts/lang.js"></script>
+    <link rel="icon" href="/pictures/favicon.ico">
+    <link rel="apple-touch-icon" href="/pictures/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Labrada:ital@0;1&family=Noto+Sans+TC:wght@400;700;900&family=Raleway:ital,wght@1,700;1,900&family=Righteous&display=swap" rel="stylesheet">
+    <!-- google search console -->
+    <meta name="google-site-verification" content="-D7l-JjlMrMH6TInutW2yKngtS2dKxOwU-qlCfFNzRE" />
+    <!-- Google Analytics: Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VPCV2CWSBB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-VPCV2CWSBB');
+    </script>
+    <!-- Google AdSense -->
+    <meta name="google-adsense-account" content="ca-pub-9189513725790874">
+    <!-- other source -->
+    <link rel="stylesheet" href="/styles/index.css">
 </head>
-<body style="background-image: url(/pictures/homepage_bg.jpg);background-size: cover;background-position: bottom;background-repeat: no-repeat;">
+<body>
     <header>
-        <div id="hometitle">
-            <p class="enwt">BlueBoy's Space</p>
+        <a id="shead" href="/">
+            <img src="/pictures/shead.png" alt="Website logo">
+        </a>
+        <a id="menu">
+            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M4 18L20 18 M4 12L20 12 M4 6L20 6" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/>
+            </svg>
+        </a>
+        <nav>
+            <ul>
+                <li><a class="navb zhwb" href="/blog/">記事</a></li>
+                <li><a class="navb zhwb" href="/article/">文章</a></li>
+                <li><a class="navb zhwb" href="/about/">關於</a></li>
+            </ul>
+        </nav>
+        <ul id="mobilenav">
+            <li><a class="navb zhwb" href="/blog/">記事</a></li>
+            <li><a class="navb zhwb" href="/article/">文章</a></li>
+            <li><a class="navb zhwb" href="/about/">關於</a></li>
+        </ul>
+        <script src="/scripts/sidemenu.js" type="text/javascript"></script>
+    </header>
+    <main>
+        <div class="pagehead">
+            <p class="pagetitle">
+                <span class="enw3">BlueBoy Space</span>
+            </p>
         </div>
-        <div id="in-link-button">
-            <a class="inb zhwb" id="blogbt" href="/blog/">記事</a>
-            <a class="inb zhwb" id="aboutbt" href="/article/" style="display: none;">文章</a>
-            <a class="inb zhwb" id="aboutbt" href="/about/">關於</a>
+        <div id="announcement">
+            <div class="pagesubtitle">
+                <p>
+                    <span class="zhwb">公告</span>
+                    <span class="enw1">Announcement</span>
+                </p>
+            </div>
+            <div class="content">
+                <h3>
+                    <span class="zhwb">日期 Date：</span><span class="enw3">2023-06-05</span>
+                </h3>
+                <p>
+                    <span class="zhwb">內容 Content：</span><br>
+                    <span class="zhw">欲前往英文版頁面<a href="/en/">請點此</a>。</span><br>
+                    <span class="enw2"><a href="/en/">Click here</a> to go to the English page.</span>
+                </p>
+                </p>
+            </div>
         </div>
-        <div id="in-link-button-en" style="display: none;">
-            <a class="inb enw" id="blogbt" href="/en/blog/">Blog</a>
-            <a class="inb enw" id="aboutbt" href="/en/article/" style="display: none;">Articles</a>
-            <a class="inb enw" id="aboutbt" href="/en/about/">About</a>
+        <div id="aboutsite">
+            <div class="pagesubtitle" id="websitet">
+                <p>
+                    <span class="zhwb">網站建置記事</span>
+                </p>
+            </div>
+            <div class="content" id="websitec">
+                <div id="websiteblock">
+                    <table id="webtime">
+                        <caption>網站建置記事</caption>
+                        <tr id="webtimetitle">
+                            <th class="time zhwb">時間</th>
+                            <th class="event zhwb" style="text-align: left;">事項</th>
+                        </tr>
+                        <tr>
+                            <td class="time enw3">2024-04-26</td>
+                            <td class="event zhw">完成網站響應式設計(RWD)</td>
+                        </tr>
+                        <tr>
+                            <td class="time enw3">2023-06-05</td>
+                            <td class="event zhw">完成英文版頁面</td>
+                        </tr>
+                        <tr>
+                            <td class="time enw3">2023-04-28</td>
+                            <td class="event zhw">完成文章發布之JavaScript</td>
+                        </tr>
+                        <tr>
+                            <td class="time enw3">2023-03-29</td>
+                            <td class="event zhw">聯絡表單建置完成</td>
+                        </tr>
+                        <tr>
+                            <td class="time enw3">2023-03-26</td>
+                            <td class="event zhw">完成網站第二版CSS設計，正式版網站「BlueBoy's Space」上線</td>
+                        </tr>
+                        <tr>
+                            <td class="time enw3">2023-02-19</td>
+                            <td class="event zhw">完成網站第一版CSS設計，<a href="https://blueboy247.github.io/website_old_ver/" target="_blank">測試版網站</a>「Allen Chang's Website」上線</td>
+                        </tr>
+                        <tr>
+                            <td class="time enw3">2023-02-18</td>
+                            <td class="event zhw">完成網站HTML撰寫</td>
+                        </tr>
+                        <tr>
+                            <td class="time enw3">2023-02-13</td>
+                            <td class="event zhw">完成網站架構之規劃</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
         </div>
+        <div class="countdown" style="margin-bottom: 20px;">
+            <script async src="/scripts/countdownSUBARU.js"></script>
+            <a data-type="countdown" data-id="3885131" class="tickcounter" title="Countdown" href="https://www.tickcounter.com/">
+                Countdown(oozora_subaru_BD)
+            </a>
+        </div>
+    </main>
+    <footer>
+        <p id="siterights">
+            Copyright © 2023
+            <a href="https://github.com/BlueBoy247/blueboy247.github.io/" target="_blank">
+                BlueBoy247
+            </a>
+            All Rights Reserved
+        </p>
         <div id="out-link-button">
             <a href="https://twitter.com/summit_AMT" target="_blank" class="outb" aria-label="Twitter" title="My Twitter">
-                <svg width="48" height="48" class="inline-block" style="padding:0%" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-        viewBox="0 0 248 204" style="enable-background:new 0 0 248 204;" xml:space="preserve">
-                    <path d="M221.95,51.29c0.15,2.17,0.15,4.34,0.15,6.53c0,66.73-50.8,143.69-143.69,143.69v-0.04
-        C50.97,201.51,24.1,193.65,1,178.83c3.99,0.48,8,0.72,12.02,0.73c22.74,0.02,44.83-7.61,62.72-21.66
-        c-21.61-0.41-40.56-14.5-47.18-35.07c7.57,1.46,15.37,1.16,22.8-0.87C27.8,117.2,10.85,96.5,10.85,72.46c0-0.22,0-0.43,0-0.64
-        c7.02,3.91,14.88,6.08,22.92,6.32C11.58,63.31,4.74,33.79,18.14,10.71c25.64,31.55,63.47,50.73,104.08,52.76
-        c-4.07-17.54,1.49-35.92,14.61-48.25c20.34-19.12,52.33-18.14,71.45,2.19c11.31-2.23,22.15-6.38,32.07-12.26
-        c-3.77,11.69-11.66,21.62-22.2,27.93c10.01-1.18,19.79-3.86,29-7.95C240.37,35.29,231.83,44.14,221.95,51.29z"/>
+                <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="30" height="30">
+                    <title>X</title>
+                    <path d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"/>
                 </svg>
             </a>
             <a href="https://github.com/BlueBoy247" target="_blank" class="outb" title="My GitHub">
-                <svg viewBox="0 0 24 24" width="48" height="48" class="inline-block" style="padding:0%">
-                    <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/>
+                <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="30" height="30">
+                    <title>GitHub</title>
+                    <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/>
                 </svg>
             </a>
-            <a class="outb" id="siteinfobt" href="/about/#aboutsite" title="本站資訊">
-                <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48">
+            <a href="https://www.patreon.com/BlueBoy247" target="_blank" class="outb" title="My Patreon">
+                <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="30" height="30">
+                    <title>Patreon</title>
+                    <path d="M22.957 7.21c-.004-3.064-2.391-5.576-5.191-6.482-3.478-1.125-8.064-.962-11.384.604C2.357 3.231 1.093 7.391 1.046 11.54c-.039 3.411.302 12.396 5.369 12.46 3.765.047 4.326-4.804 6.068-7.141 1.24-1.662 2.836-2.132 4.801-2.618 3.376-.836 5.678-3.501 5.673-7.031Z"/>
+                </svg>
+            </a>
+            <a href="https://buymeacoffee.com/blueboy247" target="_blank" class="outb" title="My BuyMeACoffee">
+                <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="30" height="30">
+                    <title>BuyMeACoffee</title>
+                    <path d="M20.216 6.415l-.132-.666c-.119-.598-.388-1.163-1.001-1.379-.197-.069-.42-.098-.57-.241-.152-.143-.196-.366-.231-.572-.065-.378-.125-.756-.192-1.133-.057-.325-.102-.69-.25-.987-.195-.4-.597-.634-.996-.788a5.723 5.723 0 00-.626-.194c-1-.263-2.05-.36-3.077-.416a25.834 25.834 0 00-3.7.062c-.915.083-1.88.184-2.75.5-.318.116-.646.256-.888.501-.297.302-.393.77-.177 1.146.154.267.415.456.692.58.36.162.737.284 1.123.366 1.075.238 2.189.331 3.287.37 1.218.05 2.437.01 3.65-.118.299-.033.598-.073.896-.119.352-.054.578-.513.474-.834-.124-.383-.457-.531-.834-.473-.466.074-.96.108-1.382.146-1.177.08-2.358.082-3.536.006a22.228 22.228 0 01-1.157-.107c-.086-.01-.18-.025-.258-.036-.243-.036-.484-.08-.724-.13-.111-.027-.111-.185 0-.212h.005c.277-.06.557-.108.838-.147h.002c.131-.009.263-.032.394-.048a25.076 25.076 0 013.426-.12c.674.019 1.347.067 2.017.144l.228.031c.267.04.533.088.798.145.392.085.895.113 1.07.542.055.137.08.288.111.431l.319 1.484a.237.237 0 01-.199.284h-.003c-.037.006-.075.01-.112.015a36.704 36.704 0 01-4.743.295 37.059 37.059 0 01-4.699-.304c-.14-.017-.293-.042-.417-.06-.326-.048-.649-.108-.973-.161-.393-.065-.768-.032-1.123.161-.29.16-.527.404-.675.701-.154.316-.199.66-.267 1-.069.34-.176.707-.135 1.056.087.753.613 1.365 1.37 1.502a39.69 39.69 0 0011.343.376.483.483 0 01.535.53l-.071.697-1.018 9.907c-.041.41-.047.832-.125 1.237-.122.637-.553 1.028-1.182 1.171-.577.131-1.165.2-1.756.205-.656.004-1.31-.025-1.966-.022-.699.004-1.556-.06-2.095-.58-.475-.458-.54-1.174-.605-1.793l-.731-7.013-.322-3.094c-.037-.351-.286-.695-.678-.678-.336.015-.718.3-.678.679l.228 2.185.949 9.112c.147 1.344 1.174 2.068 2.446 2.272.742.12 1.503.144 2.257.156.966.016 1.942.053 2.892-.122 1.408-.258 2.465-1.198 2.616-2.657.34-3.332.683-6.663 1.024-9.995l.215-2.087a.484.484 0 01.39-.426c.402-.078.787-.212 1.074-.518.455-.488.546-1.124.385-1.766zm-1.478.772c-.145.137-.363.201-.578.233-2.416.359-4.866.54-7.308.46-1.748-.06-3.477-.254-5.207-.498-.17-.024-.353-.055-.47-.18-.22-.236-.111-.71-.054-.995.052-.26.152-.609.463-.646.484-.057 1.046.148 1.526.22.577.088 1.156.159 1.737.212 2.48.226 5.002.19 7.472-.14.45-.06.899-.13 1.345-.21.399-.072.84-.206 1.08.206.166.281.188.657.162.974a.544.544 0 01-.169.364zm-6.159 3.9c-.862.37-1.84.788-3.109.788a5.884 5.884 0 01-1.569-.217l.877 9.004c.065.78.717 1.38 1.5 1.38 0 0 1.243.065 1.658.065.447 0 1.786-.065 1.786-.065.783 0 1.434-.6 1.499-1.38l.94-9.95a3.996 3.996 0 00-1.322-.238c-.826 0-1.491.284-2.26.613z"/>
+                </svg>
+            </a>
+            <a href="/privacy.html" class="outb" id="siteinfobt" title="Privacy Policy">
+                <svg role="img" viewBox="0 96 960 960" xmlns="http://www.w3.org/2000/svg" width="30" height="30">
+                    <title>Privacy Policy</title>
                     <path d="M483.175 776q12.825 0 21.325-8.625T513 746V566q0-12.75-8.675-21.375-8.676-8.625-21.5-8.625-12.825 0-21.325 8.625T453 566v180q0 12.75 8.675 21.375 8.676 8.625 21.5 8.625Zm-3.193-314q14.018 0 23.518-9.2T513 430q0-14.45-9.482-24.225-9.483-9.775-23.5-9.775-14.018 0-23.518 9.775T447 430q0 13.6 9.482 22.8 9.483 9.2 23.5 9.2Zm.284 514q-82.734 0-155.5-31.5t-127.266-86q-54.5-54.5-86-127.341Q80 658.319 80 575.5q0-82.819 31.5-155.659Q143 347 197.5 293t127.341-85.5Q397.681 176 480.5 176q82.819 0 155.659 31.5Q709 239 763 293t85.5 127Q880 493 880 575.734q0 82.734-31.5 155.5T763 858.316q-54 54.316-127 86Q563 976 480.266 976Z"/>
                 </svg>
             </a>
-            <a class="outb" id="langbt" title="Language: English" onclick="language('en');">
-                <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48">
-                    <path d="M480 976q-84 0-157-31.5T196 859q-54-54-85-127.5T80 574q0-84 31-156.5T196 291q54-54 127-84.5T480 176q84 0 157 30.5T764 291q54 54 85 126.5T880 574q0 84-31 157.5T764 859q-54 54-127 85.5T480 976Zm0-58q35-36 58.5-82.5T577 725H384q14 60 37.5 108t58.5 85Zm-85-12q-25-38-43-82t-30-99H172q38 71 88 111.5T395 906Zm171-1q72-23 129.5-69T788 725H639q-13 54-30.5 98T566 905ZM152 665h159q-3-27-3.5-48.5T307 574q0-25 1-44.5t4-43.5H152q-7 24-9.5 43t-2.5 45q0 26 2.5 46.5T152 665Zm221 0h215q4-31 5-50.5t1-40.5q0-20-1-38.5t-5-49.5H373q-4 31-5 49.5t-1 38.5q0 21 1 40.5t5 50.5Zm275 0h160q7-24 9.5-44.5T820 574q0-26-2.5-45t-9.5-43H649q3 35 4 53.5t1 34.5q0 22-1.5 41.5T648 665Zm-10-239h150q-33-69-90.5-115T565 246q25 37 42.5 80T638 426Zm-254 0h194q-11-53-37-102.5T480 236q-32 27-54 71t-42 119Zm-212 0h151q11-54 28-96.5t43-82.5q-75 19-131 64t-91 115Z"/>
-                </svg>
-            </a>
         </div>
-        <script>language()</script>
-    </header>
-    <footer></footer>
+    </footer>
 </body>
 </html>
