--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
                 <li><a class="navb zhwb" href="/blog/">記事</a></li>
                 <li><a class="navb zhwb" href="/article/">文章</a></li>
                 <li><a class="navb zhwb" href="/about/">關於</a></li>
+                <li><a class="navb zhwb" href="/en/">English</a></li>
             </ul>
         </nav>
         <ul id="mobilenav">
             <li><a class="navb zhwb" href="/blog/">記事</a></li>
             <li><a class="navb zhwb" href="/article/">文章</a></li>
             <li><a class="navb zhwb" href="/about/">關於</a></li>
+            <li><a class="navb zhwb" href="/en/">English</a></li>
         </ul>
         <script src="/scripts/sidemenu.js" type="text/javascript"></script>
     </header>
@@ -64,19 +66,10 @@
             <div class="pagesubtitle">
                 <p>
                     <span class="zhwb">公告</span>
-                    <span class="enw1">Announcement</span>
                 </p>
             </div>
             <div class="content">
-                <h3>
-                    <span class="zhwb">日期 Date：</span><span class="enw3">2023-06-05</span>
-                </h3>
-                <p>
-                    <span class="zhwb">內容 Content：</span><br>
-                    <span class="zhw">欲前往英文版頁面<a href="/en/">請點此</a>。</span><br>
-                    <span class="enw2"><a href="/en/">Click here</a> to go to the English page.</span>
-                </p>
-                </p>
+                <p class="zhwb">目前暫無公告......</p>
             </div>
         </div>
         <div id="aboutsite">
@@ -111,15 +104,15 @@
                         </tr>
                         <tr>
                             <td class="time enw3">2023-03-26</td>
-                            <td class="event zhw">完成網站第二版CSS設計，正式版網站「BlueBoy's Space」上線</td>
+                            <td class="event zhw">完成第二版CSS設計，正式版網站「BlueBoy's Space」上線</td>
                         </tr>
                         <tr>
                             <td class="time enw3">2023-02-19</td>
-                            <td class="event zhw">完成網站第一版CSS設計，<a href="https://blueboy247.github.io/website_old_ver/" target="_blank">測試版網站</a>「Allen Chang's Website」上線</td>
+                            <td class="event zhw">完成第一版CSS設計，<a href="https://blueboy247.github.io/website_old_ver/" target="_blank">測試版網站</a>「Allen Chang's Website」上線</td>
                         </tr>
                         <tr>
                             <td class="time enw3">2023-02-18</td>
-                            <td class="event zhw">完成網站HTML撰寫</td>
+                            <td class="event zhw">完成HTML撰寫</td>
                         </tr>
                         <tr>
                             <td class="time enw3">2023-02-13</td>
