--- a/privacy.html
+++ b/privacy.html
@@ -42,12 +42,14 @@
                 <li><a class="navb zhwb" href="/blog/">記事</a></li>
                 <li><a class="navb zhwb" href="/article/">文章</a></li>
                 <li><a class="navb zhwb" href="/about/">關於</a></li>
+                <li><a class="navb zhwb" href="/en/">English</a></li>
             </ul>
         </nav>
         <ul id="mobilenav">
             <li><a class="navb zhwb" href="/blog/">記事</a></li>
             <li><a class="navb zhwb" href="/article/">文章</a></li>
             <li><a class="navb zhwb" href="/about/">關於</a></li>
+            <li><a class="navb zhwb" href="/en/">English</a></li>
         </ul>
         <script src="/scripts/sidemenu.js" type="text/javascript"></script>
     </header>
