--- a/about/index.html
+++ b/about/index.html
@@ -43,12 +43,14 @@
                 <li><a class="navb zhwb" href="/blog/">記事</a></li>
                 <li><a class="navb zhwb" href="/article/">文章</a></li>
                 <li><a class="navb zhwb" href="/about/">關於</a></li>
+                <li><a class="navb zhwb" href="/en/">English</a></li>
             </ul>
         </nav>
         <ul id="mobilenav">
             <li><a class="navb zhwb" href="/blog/">記事</a></li>
             <li><a class="navb zhwb" href="/article/">文章</a></li>
             <li><a class="navb zhwb" href="/about/">關於</a></li>
+            <li><a class="navb zhwb" href="/en/">English</a></li>
         </ul>
         <script src="/scripts/sidemenu.js" type="text/javascript"></script>
     </header>
@@ -59,11 +61,6 @@
             </p>
         </div>
         <div id="aboutme">
-            <div class="pagesubtitle" id="profile">
-                <p>
-                    <span class="zhwb">個人簡介</span>
-                </p>
-            </div>
             <div class="content" id="profilec">
                 <div id="introblock">
                     <h2 class="zhw">Allen Chang</h2>
@@ -103,15 +100,15 @@
                             <div class="title zhw">JavaScript</div>
                         </div>
                         <div class="item">
-                            <img src="/pictures/profile_use/skill/python.png" alt="Python3 icon">
+                            <img src="/pictures/profile_use/skill/python.svg" alt="Python3 icon">
                             <div class="title zhw">Python 3</div>
                         </div>
                         <div class="item">
-                            <img src="/pictures/profile_use/skill/c.png" alt="C icon">
+                            <img src="/pictures/profile_use/skill/c.svg" alt="C icon">
                             <div class="title zhw">C</div>
                         </div>
                         <div class="item">
-                            <img src="/pictures/profile_use/skill/arduino.webp" alt="Arduino icon">
+                            <img src="/pictures/profile_use/skill/arduino.svg" alt="Arduino icon">
                             <div class="title zhw">Arduino</div>
                         </div>
                     </div>
