--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Hant-TW">
+<html lang="en-US">
 <head>
     <title>English Page | BlueBoy's Space</title>
     <!-- meta tag -->
@@ -34,6 +34,26 @@
         <a id="shead" href="/">
             <img src="/pictures/shead.png" alt="Website logo">
         </a>
+        <a id="menu">
+            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M4 18L20 18 M4 12L20 12 M4 6L20 6" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/>
+            </svg>
+        </a>
+        <nav>
+            <ul>
+                <li><a class="navb zhwb" href="/blog/">記事</a></li>
+                <li><a class="navb zhwb" href="/article/">文章</a></li>
+                <li><a class="navb zhwb" href="/about/">關於</a></li>
+                <li><a class="navb zhwb" href="/en/">English</a></li>
+            </ul>
+        </nav>
+        <ul id="mobilenav">
+            <li><a class="navb zhwb" href="/blog/">記事</a></li>
+            <li><a class="navb zhwb" href="/article/">文章</a></li>
+            <li><a class="navb zhwb" href="/about/">關於</a></li>
+            <li><a class="navb zhwb" href="/en/">English</a></li>
+        </ul>
+        <script src="/scripts/sidemenu.js" type="text/javascript"></script>
     </header>
     <main>
         <div class="pagehead">
@@ -84,15 +104,15 @@
                         <div class="title enw2">JavaScript</div>
                     </div>
                     <div class="item">
-                        <img src="/pictures/profile_use/skill/python.png" alt="Python3 icon">
+                        <img src="/pictures/profile_use/skill/python.svg" alt="Python3 icon">
                         <div class="title enw2">Python 3</div>
                     </div>
                     <div class="item">
-                        <img src="/pictures/profile_use/skill/c.png" alt="C icon">
+                        <img src="/pictures/profile_use/skill/c.svg" alt="C icon">
                         <div class="title enw2">C</div>
                     </div>
                     <div class="item">
-                        <img src="/pictures/profile_use/skill/arduino.webp" alt="Arduino icon">
+                        <img src="/pictures/profile_use/skill/arduino.svg" alt="Arduino icon">
                         <div class="title enw2">Arduino</div>
                     </div>
                 </div>
