Update about page

--- a/about/index.html
+++ b/about/index.html
@@ -65,7 +65,7 @@
                 <div id="introblock">
                     <h2 class="zhw">Allen Chang</h2>
                     <hr>
-                    <p class="zhw">一名弱弱的高中生，嘗試<a href="https://www.tasker.com.tw/workroom/nJjPr6">獨立接案</a>中。</p>
+                    <p class="zhw">一名弱弱的高中生，嘗試<a href="#links">獨立接案</a>中。</p>
                     <p class="zhw">英文大概 CEFR B1 程度，日文約 JLPT N4 程度，韓文和德文還是初學。</p>
                     <p class="zhw">目前正在學習全端開發、外掛程式與手機應用開發、物聯網、機器學習及資安技術。</p>
                     <h3 class="zhw" id="education">學歷</h3>
@@ -112,7 +112,7 @@
                             <div class="title zhw">Arduino</div>
                         </div>
                     </div>
-                    <h3 class="zhw" id="programming">個人連結</h3>
+                    <h3 class="zhw" id="links">個人連結</h3>
                     <details>
                         <summary class="zhw">Codeforces</summary>
                         <a href="https://codeforces.com/profile/shuba247" target="_blank">
@@ -126,12 +126,18 @@
                         </a>
                     </details>
                     <details>
+                        <summary class="zhw">接案平台</summary>
+                        <ul>
+                            <li class="zhw"><a href="https://www.tasker.com.tw/workroom/nJjPr6">Tasker 出任務</a></li>
+                            <li class="zhw"><a href="https://www.pro360.com.tw/service/466549">PRO360 達人網</a></li>
+                        </ul>
+                    </details>
+                    <details>
                         <summary class="zhw">其它平台</summary>
                         <ul>
                             <li class="zhw"><a href="https://zerojudge.tw/UserStatistic?id=185068" target="_blank">ZeroJudge</a></li>
                             <li class="zhw"><a href="https://tioj.ck.tp.edu.tw/users/allen247" target="_blank">TIOJ</a></li>
                             <li class="zhw"><a href="https://play.picoctf.org/users/shuba247">picoCTF</a></li>
-                            <li class="zhw"><a href="https://www.tasker.com.tw/workroom/nJjPr6">Tasker 出任務</a></li>
                         </ul>
                     </details>
                     <h3 class="zhw" id="project">專案</h3>
