--- a/about/index.html
+++ b/about/index.html
@@ -130,6 +130,7 @@
                         <ul>
                             <li class="zhw"><a href="https://www.tasker.com.tw/workroom/nJjPr6">Tasker 出任務</a></li>
                             <li class="zhw"><a href="https://www.pro360.com.tw/service/466549">PRO360 達人網</a></li>
+                            <li class="zhw"><a href="https://case.1111.com.tw/FindTalent/TalentInfo?Id=4202404280008">CASE+外包網</a></li>
                         </ul>
                     </details>
                     <details>
