--- a/about/project.html
+++ b/about/project.html
@@ -78,12 +78,19 @@
                     <div class="protitle zhwb">Notice Bot</div>
                     <div class="probrief zhw">會替你倒數事件的 DC Bot。</div>
                 </a>
-                <a href="https://tw-anscheck.vercel.app/" target="_blank" class="problock">
+                <a href="https://tw-anscheck.pages.dev/" target="_blank" class="problock">
                     <div class="proimage">
                         <img src="/pictures/project_use/TW-AnsCheck.png" alt="臺灣升學考試對答" title="臺灣升學考試對答">
                     </div>
                     <div class="protitle zhwb">臺灣升學考試對答</div>
                     <div class="probrief zhw">線上對升學考試答案的平台。</div>
+                </a>
+                <a href="https://github.com/BlueBoy247/YT2file" target="_blank" class="problock">
+                    <div class="proimage">
+                        <img src="/pictures/project_use/YT2file.png" alt="YT2file" title="YT2file">
+                    </div>
+                    <div class="protitle zhwb">YT2file</div>
+                    <div class="probrief zhw">一款能以高品質下載YouTube影片的開源免安裝軟體。</div>
                 </a>
             </div>
         </div>
