Update about page

--- a/about/index.html
+++ b/about/index.html
@@ -88,15 +88,15 @@
                     <h3 class="zhw" id="skill">技能</h3>
                     <div class="smallitems">
                         <div class="item">
-                            <img src="/pictures/profile_use/skill/html5.svg" alt="html5 icon">
+                            <img src="/pictures/profile_use/skill/html5.svg" alt="HTML5 icon">
                             <div class="title zhw">HTML 5</div>
                         </div>
                         <div class="item">
-                            <img src="/pictures/profile_use/skill/css3.svg" alt="css3 icon">
+                            <img src="/pictures/profile_use/skill/css3.svg" alt="CSS3 icon">
                             <div class="title zhw">CSS 3</div>
                         </div>
                         <div class="item">
-                            <img src="/pictures/profile_use/skill/Javascript.svg" alt="Javascript icon">
+                            <img src="/pictures/profile_use/skill/javascript.svg" alt="Javascript icon">
                             <div class="title zhw">JavaScript</div>
                         </div>
                         <div class="item">
