--- a/en/index.html
+++ b/en/index.html
@@ -92,15 +92,15 @@
                 <h3 class="enw2" id="skill">Skill</h3>
                 <div class="smallitems">
                     <div class="item">
-                        <img src="/pictures/profile_use/skill/html5.svg" alt="html5 icon">
+                        <img src="/pictures/profile_use/skill/html5.svg" alt="HTML5 icon">
                         <div class="title enw2">HTML 5</div>
                     </div>
                     <div class="item">
-                        <img src="/pictures/profile_use/skill/css3.svg" alt="css3 icon">
+                        <img src="/pictures/profile_use/skill/css3.svg" alt="CSS3 icon">
                         <div class="title enw2">CSS 3</div>
                     </div>
                     <div class="item">
-                        <img src="/pictures/profile_use/skill/Javascript.svg" alt="Javascript icon">
+                        <img src="/pictures/profile_use/skill/javascript.svg" alt="Javascript icon">
                         <div class="title enw2">JavaScript</div>
                     </div>
                     <div class="item">
