Added: INFOR 35th website

--- a/about/project.html
+++ b/about/project.html
@@ -94,6 +94,21 @@
                 </a>
             </div>
         </div>
+        <div class="pagesubtitle" id="project">
+            <p>
+                <span class="zhwb">團體專案</span>
+            </p>
+        </div>
+        <div class="content" id="projectc">
+            <a href="https://35.infor.org/" target="_blank" class="problock">
+                <div class="proimage">
+                    <img src="/pictures/project_use/infor35th-website.png" alt="INFOR 35th 社網" title="INFOR 35th 社網">
+                </div>
+                <div class="protitle zhwb">INFOR 35th 官網</div>
+                <div class="probrief zhw">建中資訊社35屆社團官網。</div>
+            </a>
+        </div>
+    </div>
     </main>
     <footer>
         <p id="siterights">
