--- a/about/project.html
+++ b/about/project.html
@@ -90,7 +90,7 @@
                         <img src="/pictures/project_use/YT2file.png" alt="YT2file" title="YT2file">
                     </div>
                     <div class="protitle zhwb">YT2file</div>
-                    <div class="probrief zhw">一款能以高品質下載YouTube影片的開源免安裝軟體。</div>
+                    <div class="probrief zhw">一款能以高品質下載YouTube影片的免費開源免安裝軟體。</div>
                 </a>
             </div>
         </div>
