Finished article page

--- a/article/index.html
+++ b/article/index.html
@@ -27,6 +27,8 @@
     <meta name="google-adsense-account" content="ca-pub-9189513725790874">
     <!-- other source -->
     <link rel="stylesheet" href="/styles/article.css">
+    <script src="/scripts/article.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -61,12 +63,15 @@
             </p>
         </div>
         <div class="content" id="subjectc">
-            <a href="./html/" class="subblock">
-                <div class="subtitle zhwb">HTML教學</div>
-                <div class="subbrief zhw">會替你倒數事件的 DC Bot。</div>
+            <a href="./LoTuX_CTF_Writeup/" class="subblock">
+                <div class="subtitle zhwb">LoTuX CTF Writeup</div>
+                <div class="subbrief zhw">共 <span id="LoTuX_CTF_Writeup"><script>countArticles("LoTuX_CTF_Writeup");</script></span> 篇</div>
+            </a>
+            <a href="./picoCTF_Writeup/" class="subblock">
+                <div class="subtitle zhwb">picoCTF Writeup</div>
+                <div class="subbrief zhw">共 <span id="picoCTF_Writeup"><script>countArticles("picoCTF_Writeup");</script></span> 篇</div>
             </a>
         </div>
-        <p class="zhw" style="text-align: center; font-size: 25px;">建置中......</p>
     </main>
     <footer>
         <p id="siterights">
